shesmu-server/src/test/resources/bad/non-stream-aggregate.shesmu
Define foo(string s)
	Group a = accession By s;
